# cyberm4fia-scanner

./: .dockerignore  .env.example  .gitignore  .mcp.example.json  .mcp.json  Dockerfile  README.md  api_server.py  debug_test.py  docker-compose.yml  exceptions_list.txt  pyproject.toml  requirements.txt  ruff.toml  scanner.py  usagewithai.md
core/: __init__.py  cli.py  documentation.py  engine.py  interactive.py  module_registry.py  module_runners.py  output.py  scan_context.py  scan_option_specs.py  scan_options.py  scope.py  session.py
data/: payload_memory.json  scan_intelligence.db
memory/: feedback_style.md  project_next_steps.md  user_erkan.md
modules/: __init__.py  account_takeover.py  api_inject.py  api_scanner.py  api_spec_parser.py  auth_bypass.py  baas_audit.py  browser_exploit.py  brute_force.py  business_logic.py  cloud_enum.py  cmdi.py  cmdi_shell.py  cms_enum.py  compare.py  cookie_hsts_audit.py  cors.py  crawler.py  crlf.py  csp_bypass.py  csrf.py  deserialization.py  dom_static.py  dom_xss.py  dynamic_crawler.py  email_harvest.py  endpoint_fuzzer.py  file_upload.py  forbidden_bypass.py  fuzzer.py  git_history_scan.py  google_dorker.py  graphql_audit.py  guaranteed_checks.py  header_inject.py  http_methods.py  jwt_attack.py  ldap.py  lfi.py  lfi_exploit.py  (+38 more)
payloads/: cache_poisoning.txt  cmdi.txt  cors.txt  crlf.txt  csrf.txt  csv_injection.txt  deserialization.txt  el_injection.txt  file_upload.txt  graphql.txt  host_header.txt  idor.txt  jwt.txt  ldap.txt  lfi.txt  log4shell.txt  nosqli.txt  oauth.txt  open_redirect.txt  proto_pollution.txt  (+8 more)
(+213 files in other folders)
