[project]
name = "cyberm4fia-scanner"
version = "2.0.0"
description = "Context-aware web vulnerability scanner"
requires-python = ">=3.10"
dependencies = [
    "httpx[http2]>=0.27.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "playwright>=1.40.0",
    "rich>=13.0",
    "cryptography>=41.0",
    "pyyaml>=6.0",
    "dnspython>=2.4.0",
    "pyjwt>=2.8.0",
    "python-dotenv>=1.0.0",
    "fastapi[standard]>=0.110.0",
    "urllib3>=1.26.0",
    "paramiko>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E402", "E501"]
